--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // classPath Navigation
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.3'
     }
 }
 
